@@ -3,10 +3,15 @@ package com.backend.backendFinal.service.impl;
 import com.backend.backendFinal.mapper.ProductMapper;
 import com.backend.backendFinal.mapper.ProductPropertyMapper;
 import com.backend.backendFinal.model.dto.ProductDto;
+import com.backend.backendFinal.model.dto.requestDto.ProductPropertyRequestDto;
 import com.backend.backendFinal.model.dto.requestDto.ProductRequestDto;
 import com.backend.backendFinal.model.dto.responseDto.ProductResponseDto;
+import com.backend.backendFinal.model.entity.Brand;
+import com.backend.backendFinal.model.entity.Category;
 import com.backend.backendFinal.model.entity.Product;
 import com.backend.backendFinal.model.entity.ProductProperty;
+import com.backend.backendFinal.repository.BrandRepository;
+import com.backend.backendFinal.repository.CategoryRepository;
 import com.backend.backendFinal.repository.ProductPropertyRepository;
 import com.backend.backendFinal.repository.ProductRepository;
 import com.backend.backendFinal.service.ProductService;
@@ -19,70 +24,89 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
-    private final ProductMapper productMapper;
     private final ProductRepository productRepository;
-    private final ProductPropertyRepository productPropertyRepository;
-    private  final ProductPropertyMapper productPropertyMapper;
+    private final BrandRepository brandRepository;
+    private final CategoryRepository categoryRepository;
+    private final ProductPropertyRepository productPropertyRepository;  // BU İLƏ ƏLAVƏ ET
+    private final ProductMapper productMapper;
 
     @Override
-    public ProductResponseDto getById(Integer id) {
-        return productMapper.toEntityMapResponseDto(productRepository.findById(id).orElseThrow(NullPointerException::new));
+    public ProductResponseDto create(ProductRequestDto dto) {
+        Product product = productMapper.toRequestDtoMapEntity(dto);
+
+        Brand brand = brandRepository.findById(dto.getBrandId())
+                .orElseThrow(() -> new RuntimeException("Brand not found"));
+        Category category = categoryRepository.findById(dto.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        product.setBrand(brand);
+        product.setCategory(category);
+
+        if (dto.getProperties() != null) {
+            List<ProductProperty> properties = dto.getProperties().stream().map(pDto -> {
+                ProductProperty property = new ProductProperty();
+                property.setProduct(product);
+                property.setName(pDto.getName());
+                property.setValue(pDto.getValue());
+                return property;
+            }).toList();
+            product.setProperties(properties);
+        }
+
+        Product savedProduct = productRepository.save(product);
+
+        return productMapper.toEntityMapResponseDto(savedProduct);
     }
 
-    @Override
-    public ProductResponseDto add(ProductRequestDto productRequestDto) {
-        // DTO-dan Entity-ə çevirmə (brand və s. üçün mapper istifadə oluna bilər)
-        Product product = productMapper.toRequestDtoMapEntity(productRequestDto);
 
-        
-        // ProductProperty-ləri ID-lərə əsasən tapıb siyahıya yığırıq
-        List<ProductProperty> productProperties = new ArrayList<>();
-        if (productRequestDto.getProductPropertyId() != null) {
-            for (Integer propertyId : productRequestDto.getProductPropertyId()) {
-                ProductProperty property = productPropertyRepository.findById(propertyId)
-                        .orElseThrow(() -> new RuntimeException("ProductProperty tapılmadı: ID = " + propertyId));
-                productProperties.add(property);
+    @Override
+    public ProductResponseDto update(Integer id, ProductRequestDto dto) {
+        Product existing = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        Brand brand = brandRepository.findById(dto.getBrandId())
+                .orElseThrow(() -> new RuntimeException("Brand not found"));
+
+        Category category = categoryRepository.findById(dto.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        existing.setName(dto.getName());
+        existing.setPrice(dto.getPrice());
+        existing.setBrand(brand);
+        existing.setCategory(category);
+
+        for (ProductPropertyRequestDto pDto : dto.getProperties()) {
+            for (ProductProperty p : existing.getProperties()) {
+                if (p.getId().equals(pDto.getId())) {
+                    p.setName(pDto.getName());
+                    p.setValue(pDto.getValue());
+                    break; // tapdıq, artıq davam etməyə ehtiyac yoxdur
+                }
             }
         }
 
-        // Entity-yə productProperties-i təyin edirik
-        product.setProductProperties(productProperties);
 
-        // Product-u bazaya yazırıq
-        productRepository.save(product);
-
-        // Entity-ni Response DTO-ya çeviririk və qaytarırıq
-        return productMapper.toEntityMapResponseDto(product);
+        Product updated = productRepository.save(existing);
+        return productMapper.toEntityMapResponseDto(updated);
     }
-
-
-    @Override
-    public ProductResponseDto update(ProductRequestDto productRequestDto) {
-        Product product =productMapper.toRequestDtoMapEntity(productRequestDto);
-        productRepository.save(product);
-        ProductResponseDto productResponseDto =productMapper.toEntityMapResponseDto(product);
-        return productResponseDto;    }
 
     @Override
     public void delete(Integer id) {
         productRepository.deleteById(id);
-
     }
 
     @Override
-    public List<ProductResponseDto> getProductByBrandId(Integer id) {
-        return productRepository.findByBrand_Id(id).stream().map(productMapper::toEntityMapResponseDto).toList();
+    public ProductResponseDto getById(Integer id) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+        return productMapper.toEntityMapResponseDto(product);
     }
 
-//    @Override
-//    public List<ProductPropertyDto> getProductPropertyByProduct(Integer id) {
-//        Product product = productRepository.getById(id);
-//        List<ProductPropertyDto>  productPropertyDto = productPropertyRepository
-//                .findByProduct(product).stream()
-//                .map(productProperty -> productPropertyMapper.toProductPropertyDto(productProperty))
-//                .collect(Collectors.toList());
-//        return productPropertyDto;
-//    }
-
-
+    @Override
+    public List<ProductResponseDto> getAll() {
+        return productRepository.findAll()
+                .stream()
+                .map(productMapper::toEntityMapResponseDto)
+                .toList();
+    }
 }
